<resources>
    <string name="app_name">FinalProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Abington Heights Field Hockey</string>
    <string name="info"> 2022 Season</string>
    <string name="roster">Roster</string>
    <string name="coach"> Coaching</string>
    <string name="games"> Games</string>
    <string name="coachingStaff">Coaching Staff:</string>
    <string name="coachG">Coach Glenn</string>
    <string name="coachZ"> Coach Z</string>
    <string name="website">https://ahsdathletics.org/main/teamschedule/id/3807358/seasonid/4751470</string>
    <string name="coachSnackBar">Coaching Information and Other Information</string>
    <string name="rosterToast">AHFH Roster</string>
    <string name="gamesToast"> AHFH Games</string>
    <string name="relatedInfo">Related Information:</string>
    <string name="aboutRosterPlayers"> About AHFH Players</string>
    <string name="gradYearInf">On this years starting roster there are 13 varsity athletes. Two of them will graduate in 2023.
    Seven of them will graduate in 2024. Two of them will graduate in 2025, and two of them will graduate in 2026.</string>
    <string name="positionInfo"> Out of the 13 athletes on this roster, three of them play forward, four of them play midfield,
    five of them play defense, and one plays goalie. </string>
    <string name="aboutGamesTitle"> About AHFH Games</string>
    <string name="aboutGameInfo">This past 2022 season the field hockey team went 12–2. The teams only
    two losses were to Wyoming Area during the regular season, and then to Selinsgrove during the playoffs.</string>
    <string name="awards"> This season the team won the League Championship. AHFH has not won this award in over 20 years.
    Also, the team won the sportsmanship award. This award is given out by the refs. They all get together and choose the team who
    the believe had the best sportsmanship towards other teams.</string>
    <string name="returnHome"> Would you like to return to the Home Screen?</string>
    <string name="numberText">Phone Number</string>
    <string name="mapText"> Map</string>
    <string name = "galleryTitle"> Gallery!!!</string>
    <string name ="coachGlenn"> Coach Glenn</string>
    <string name ="coachz"> Coach Z</string>

</resources>