<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/aboutPlayers"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context=".AboutPlayersFragment" >

    <TextView
        android:id="@+id/aboutPlayerTitle"
        style="@style/newStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutRosterPlayers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/gradYearInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/gradYearInf"
        android:textColor="@color/lightBlue"
        android:textSize="20dp"
        android:padding =  "8dp"
        app:fontFamily="@font/artifika"
        app:layout_constraintBottom_toTopOf="@+id/postionInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutPlayerTitle"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/postionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:gravity="center"
        android:text="@string/positionInfo"
        android:textColor="@color/lightBlue"
        android:textSize="20dp"
        android:padding =  "8dp"
        app:fontFamily="@font/artifika"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>