<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/aboutGames"
    android:background="@color/lightGray"
    tools:context=".AboutGamesFragment">

    <TextView
        android:id="@+id/aboutGamesTitle"
        style="@style/newStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutGamesTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:fontFamily="@font/artifika"
        android:gravity="center"
        android:text="@string/aboutGameInfo"
        android:textColor="@color/lightBlue"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/awards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutGamesTitle"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/awards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:fontFamily="@font/artifika"
        android:gravity="center"
        android:text="@string/awards"
        android:textColor="@color/lightBlue"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/teamPic"
        android:layout_width="408dp"
        android:layout_height="235dp"
        android:layout_marginBottom="11dp"
        android:src="@drawable/team"
        app:layout_constraintBottom_toTopOf="@+id/awards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/record"
        app:layout_constraintVertical_bias="0.589" />

</androidx.constraintlayout.widget.ConstraintLayout>